--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -23,6 +26,7 @@
     "eslint-plugin-flowtype": "2.50.1",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
+    "formik": "^1.3.2",
     "fs-extra": "7.0.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -46,7 +50,6 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
-    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "style-loader": "0.23.0",
