--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
+    "start": "node server.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "clear:babel-cache": "rimraf -rf ./node_modules/.cache/babel-loader/*",
