Change .env again

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NODE_ENV=local
 TZ=Asia/Jakarta
 PORT=3003
 
-API_URL=https://stoqo-take-home.xdzdxquptm.ap-southeast-1.elasticbeanstalk.com
+API_URL=http://stoqo-take-home.xdzdxquptm.ap-southeast-1.elasticbeanstalk.com
